# rpi2b-kernel-dev

./: CMakeLists.txt  README.md  kernel.ld  toolchain-arm-none-eabi.cmake
include/: uart.h
src/: main.c  start.S
src/uart/: uart.S
